Prevent unexpected scrollbars to be shown

--- a/doc/templates/gamalto/static/styles/prettify-monokai.css
+++ b/doc/templates/gamalto/static/styles/prettify-monokai.css
@@ -4,7 +4,7 @@ pre.prettyprint {
   display: block; 
   background-color: #272822; 
   padding:1em;
-  overflow:scroll;
+/*  overflow:scroll;*/
 }
 
 /* Orange Highlight */
